@@ -11,7 +11,7 @@
   #Parameters:                                                                                                           
   #Number:     ID:     InjectionValue:     ranInjPar:     Sigma:     BoundType:     BoundLow:           BoundUp:                        Description:
 								                                               
-  1            61      3.0836              0              0.1        1              3.000               12.000                          Mc             chirp mass (Mo)
+  1            61      3.0000              0              0.1        1              1.000               12.000                          Mc             chirp mass (Mo)
   2            62      0.2222              0              0.1        1              0.03                0.25                            eta            symmetric mass ratio (-)
   3            11      894377000.00000     0              0.1        2              -0.05000            0.05000                         t_c            GPS time of coalescence (s)
   4            22      2.8904              0              0.1        1              -6.9                4.6                             log(d_L)       log of luminosity distance (Mpc)
